prom-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    meta.helm.sh/release-name: prom-label-proxy
    meta.helm.sh/release-namespace: monitoring
  creationTimestamp: "2026-01-11T16:11:12Z"
  generation: 7
  labels:
    app.kubernetes.io/instance: prom-label-proxy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prom-label-proxy
    app.kubernetes.io/version: v0.12.1
    helm.sh/chart: prom-label-proxy-0.17.0
  name: prom-label-proxy
  namespace: monitoring
  resourceVersion: "3147302"
  uid: 99173cfc-3dc6-4b5d-a511-613e114beada
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: prom-label-proxy
      app.kubernetes.io/name: prom-label-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: prom-label-proxy
        app.kubernetes.io/name: prom-label-proxy
    spec:
      containers:
      - args:
        - --insecure-listen-address=0.0.0.0:8080
        - --upstream=http://thanos-query-ts-1.monitoring.svc:9090/querier
        - --label=tenant_id
        - --enable-label-apis=true
        - --error-on-replace=true
        - --tls-cert-file=/etc/proxy-tls/tls.crt
        - --tls-key-file=/etc/proxy-tls/tls.key
        - --tls-ca-file=/etc/proxy-tls/ca.crt
        - --require-client-cert=true
        - --cert-auth-ou=EnableTenant=true
        env:
        - name: CLICKHOUSE_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: ch-auth
        - name: CLICKHOUSE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: ch-auth
        - name: LOGS_URL
          value: https://ch.monitoring.svc:8123
        - name: TRACES_URL
          value: https://ch.monitoring.svc:8123
        - name: PLATFORM_APISERVER_DOMAIN
          value: https://10.2.0.88/
        - name: THANOS_RECEIVER_URL
          value: http://thanos-receive-router-ts-1.monitoring.svc:19291
        image: rokibulhasan114/prom-label-proxy:perses
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: http
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: prom-label-proxy
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: http
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsGroup: 65534
          runAsNonRoot: true
          runAsUser: 65534
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/proxy-tls
          name: proxy-tls
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: prom-label-proxy
      serviceAccountName: prom-label-proxy
      terminationGracePeriodSeconds: 30
      volumes:
      - name: proxy-tls
        secret:
          defaultMode: 420
          secretName: prom-proxy-cert
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-01-11T18:08:37Z"
    lastUpdateTime: "2026-01-11T18:08:37Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-01-11T16:25:08Z"
    lastUpdateTime: "2026-01-11T18:24:43Z"
    message: ReplicaSet "prom-label-proxy-59b5cb9f96" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 7
  readyReplicas: 1
  replicas: 2
  unavailableReplicas: 1
  updatedReplicas: 1
